# dl-compiler-dao

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
NPU_Project/: Makefile  README.md
NPU_Project/constraints/: npu_top.sdc
NPU_Project/docs/: register_map.md
NPU_Project/isa/: isa_defines.vh
NPU_Project/rtl/: decoder.v  dma_engine.v  multi_bank_sram.v  npu_top.v  pe.v  systolic_array.v
NPU_Project/sim/: Makefile  run.bat  run.sh  tb_npu_top  tb_npu_top.v  test_compile  test_mlir.py  test_utils.py
NPU_Soft_Hard_Stack/: README.md  main.py  pyproject.toml
NPU_Soft_Hard_Stack/npu_stack/: __init__.py  ast.py  errors.py  ir.py  shape.py
NPU_Soft_Hard_Stack/npu_stack/backends/: __init__.py  cpu.py  npu.py  npu_mlir.py
NPU_Soft_Hard_Stack/tests/: test_npu_backend.py  test_npu_stack.py
docs/adr/: 001-linalg-lowering.md
docs/api/: compiler.html  index.html  search.js
docs/api/compiler/: backends.html  isa_mapper.html  mlir.html  passes.html
docs/api/compiler/backends/: npu.html
mini-dl-compiler/: README.md  main.py  pyproject.toml
mini-dl-compiler/artifacts/: graph_after.dot  graph_before.dot
mini-dl-compiler/compiler/: __init__.py  codegen.py  ir.py  optimizer.py  ssair.py  viz.py
mini-dl-compiler/compiler/backends/: __init__.py  npu.py
mini-dl-compiler/compiler/isa_mapper/: __init__.py  assembler.py  bank_allocator.py  instruction_emitter.py  isa.py  scheduler.py  simulator.py  tiler.py  types.py
mini-dl-compiler/compiler/mlir/: __init__.py  frontend.py  lowering_pipeline.py  npu_dialect.py  npu_dialect.td  npu_ops.td  onnx_frontend.py  rvv_lowering.py
mini-dl-compiler/compiler/passes/: __init__.py  lowering.py  memory_planning.py  tiling.py
mini-dl-compiler/compiler_bak/: codegen.py  ir.py  lowering.py  main.py  memory.py  pipeline.py  tiling.py  transforms.py
mini-dl-compiler/compiler_bak/dialects/: __init__.py  linalg.py
mini-dl-compiler/tests/: test_backends.py  test_codegen.py  test_integration.py  test_integration_full.py  test_ir.py  test_isa_mapper.py  test_mlir_frontend.py  test_optimizer.py  test_passes.py  test_viz.py
