[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "npu-soft-hard-stack"
version = "0.3.0"
description = "NPU compiler frontend: AST → TaskGraph → Backend (CPU/NPU)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]
optional-dependencies.dev = [
    "pytest>=7.4",
    "ruff>=0.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["npu_stack*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
